--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <label for="message">message :</label>
         <Textarea rows="6" name="message"></Textarea>
         <button type="submit">Send</button>
-        <input type="hidden" name="_next" value="http://127.0.0.1:5500/CV/Thankyou.html">
+        <input type="hidden" name="_next" value="https://mater1212.github.io/master1212.github.io/thankyou.html">
     </form>
     <footer>
         &copy; <a href="index.html">Carter W. Jackson</a> • <a href="https://www.linkedin.com/in/carter-jackson-447286346/"> <i class="fa-brands fa-linkedin" style="color: #0490fb;"></i> </a>
