--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <section class = "splash">
         <h1>Carter W. Jackson</h1>
         <img src="images/me.jpg" alt="Image" width="15%">
-        <p>5000 Louve Route • Paris, France 2024 • 404.421.5725 • email@uga.edu</p>
+        <p> Athens, 30606 • (229)-848-4905 • carter.jackson@uga.edu</p>
         <p>I am a creative, cutting-edge, network engineer with strong skills in Python and java.</p>
         <hr>
     </section>
     <section>
         <h2>Education</h2>
-        <p>UGA, expected graduation date is 2026, Majoring in computer Scienc, overall GPA of 3.89, Systems Programming, Discrete Mathmatics, Calculus I, Computer Architecture, Data Structers. </p>
+        <p>UGA, expected graduation date is 2026, Majoring in computer Scienc, overall GPA of 3.80, Systems Programming, Discrete Mathmatics, Calculus I, Computer Architecture, Data Structers. </p>
     </section>
     <section>
         <h2>Honors and Awards</h2>
